[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scenes/Menu/Title/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Menu/Title/SettingsButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Menu/Title/PlayButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Menu/Title/QuitButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Fonts/grimoire_font.tres" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/BGM/3. Limited Time (Main Theme).ogg" type="AudioStream" id=6]
[ext_resource path="res://Assets/UI/titlescreen/sound_on.png" type="Texture" id=7]
[ext_resource path="res://Assets/UI/titlescreen/sound_off.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Menu/Title/Background.gd" type="Script" id=9]
[ext_resource path="res://Assets/Background/Nebula Aqua-Pink.png" type="Texture" id=10]
[ext_resource path="res://Assets/Background/Nebula Blue.png" type="Texture" id=11]
[ext_resource path="res://Assets/Background/Nebula Red.png" type="Texture" id=12]

[sub_resource type="DynamicFont" id=1]
size = 70
outline_size = 9
font_data = ExtResource( 5 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://Assets/Fonts/Montserrat-ExtraBold.ttf"

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = SubResource( 2 )

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -20.0, -10.0 ]
}

[sub_resource type="Animation" id=5]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="TitleScreen" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1160.0
margin_bottom = 640.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="Label" parent="Menu"]
margin_right = 1040.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.945098, 0.941176, 0.929412, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "timeless brother"
align = 1
uppercase = true

[node name="Center" type="HBoxContainer" parent="Menu"]
margin_top = 90.0
margin_right = 1040.0
margin_bottom = 323.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/Center"]
margin_right = 518.0
margin_bottom = 233.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="PlayButton" parent="Menu/Center/Buttons" instance=ExtResource( 3 )]
margin_top = 6.0
margin_right = 518.0
margin_bottom = 66.0

[node name="CreditsButton" parent="Menu/Center/Buttons" instance=ExtResource( 2 )]
margin_top = 86.0
margin_right = 518.0
margin_bottom = 146.0

[node name="QuitButton" parent="Menu/Center/Buttons" instance=ExtResource( 4 )]
margin_top = 166.0
margin_right = 518.0
margin_bottom = 226.0

[node name="CenterContainer" type="CenterContainer" parent="Menu/Center"]
margin_left = 522.0
margin_right = 1040.0
margin_bottom = 233.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Footer" type="Label" parent="Menu"]
margin_top = 327.0
margin_right = 1040.0
margin_bottom = 560.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "Version 1.0.0
Drunkenstein Studios"

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -20.0
autoplay = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="BGM"]
anims/FadeIn = SubResource( 4 )

[node name="SoundIcon" type="TextureButton" parent="."]
margin_left = 29.2521
margin_top = 665.209
margin_right = 69.2521
margin_bottom = 705.209
toggle_mode = true
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Node2D" parent="."]
z_index = -1
script = ExtResource( 9 )

[node name="AquaPinkBG" type="Sprite" parent="Background"]
modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Background/AquaPinkBG"]
anims/FadeIn = SubResource( 5 )
anims/FadeOut = SubResource( 6 )

[node name="BlueBG" type="Sprite" parent="Background"]
modulate = Color( 1, 1, 1, 0 )
z_index = -1
texture = ExtResource( 11 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="Background/BlueBG"]
anims/FadeIn = SubResource( 7 )
anims/FadeOut = SubResource( 8 )

[node name="RedBG" type="Sprite" parent="Background"]
z_index = -2
texture = ExtResource( 12 )
[connection signal="pressed" from="Menu/Center/Buttons/PlayButton" to="." method="start_game"]
[connection signal="pressed" from="Menu/Center/Buttons/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="Menu/Center/Buttons/QuitButton" to="." method="quit_game"]
[connection signal="toggled" from="SoundIcon" to="." method="_on_SoundIcon_toggled"]
